# CIS1904Homework

./: setup.txt
week00/homework/: Exercises.hs  hw00.cabal  instructions.md
week01/class/: Exercises.hs  HaskellDesign.md  HaskellSyntax.md  class.cabal
week01/homework/: Exercises.hs  hw.cabal
week02/class/: .gitignore  Exercises.hs  Testing.md  class.cabal
week02/homework/: .hlint.yaml  Exercises.hs
week03/class/: ADTs.md  ExercisesADTs.hs  ExercisesHO.hs  HigherOrder.md  class.cabal
week03/homework/: Exercises.hs  hw.cabal
week04/class/: .hlint.yaml  Exercises.hs  Polymorphism.md  Recursion.md
week04/homework/: .hlint.yaml  Exercises.hs
week05/class/: Exercises.hs  LazyEvaluation.md
week05/homework/: Exercises.hs  hw.cabal
week08/class/: Exercises.hs  Typeclasses.md  class.cabal
week08/homework/: Exercises.hs
week09/class/: .hlint.yaml  Exercises.hs  FunctorFold.md
week09/class/.stack-work/ghci/c68a25fe/: cabal_macros.h
week09/homework/: Exercises.hs  hw.cabal  stack.yaml
week10/class/: .hlint.yaml  Exercises.hs  Monads.md
week10/homework/: .hlint.yaml  Exercises.hs  hw.cabal
week11/class/: .hlint.yaml  Exercises.hs  IO.md  class.cabal
week11/class/two/: input3.txt  result.txt
week11/guest-lecture/: README.md  micro-haskell.cabal  microgpt.py
week11/guest-lecture/src/: CPSExercise.hs  Main.hs  MainExercise.hs  Micro.hs  MicroExercise.hs
week11/homework/: .hlint.yaml  Exercises.hs  hw.cabal  stack.yaml
week12/homework/: Exercises.hs
week12/homework/testFiles/: bool_comparison.txt  complex_arith.txt  len_check.txt  negations.txt  nil_val.txt  not_check.txt  string_concat.txt
week13/class/: .hlint.yaml  Exercises.hs  Tyche.hs  class.cabal  stack.yaml
